--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,24 @@
 # 数据库配置
-DATABASE_URL="mysql://root:root@localhost:3306/blog_next"
+DATABASE_URL="mysql://root:root@localhost:3306/database_name"
+
+# 应用配置
+NEXTAUTH_SECRET="your-nextauth-secret-here"
+NEXTAUTH_URL="http://localhost:3000"
+
+# 第三方服务配置（可选）
+GOOGLE_CLIENT_ID="your-google-client-id"
+GOOGLE_CLIENT_SECRET="your-google-client-secret"
+
+# 文件上传配置
+UPLOAD_DIR="./public/uploads"
+MAX_FILE_SIZE="10485760"  # 10MB
+
+# 邮件配置（可选）
+SMTP_HOST="smtp.gmail.com"
+SMTP_PORT="587"
+SMTP_USER="your-email@gmail.com"
+SMTP_PASS="your-email-password"
+
+# 分析工具配置（可选）
+GOOGLE_ANALYTICS_ID="your-ga-id"
+VERCEL_ANALYTICS_ID="your-vercel-id"
