--- a/package.json
+++ b/package.json
@@ -7,14 +7,25 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate": "prisma generate",
-    "db:push": "prisma db push",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:seed": "tsx prisma/seed.ts"
+    "db:generate:prod": "dotenv -e .env.production -- prisma generate",
+    "db:generate:local": "dotenv -e .env.local -- prisma generate",
+    "db:push:prod": "dotenv -e .env.production -- prisma db push",
+    "db:push:local": "dotenv -e .env.local -- prisma db push",
+    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate prod",
+    "db:migrate:local": "dotenv -e .env.local -- prisma migrate dev",
+    "db:studio:prod": "dotenv -e .env.production -- prisma studio",
+    "db:studio:local": "dotenv -e .env.local -- prisma studio",
+    "db:seed:prod": "dotenv -e .env.production -- tsx prisma/seed.ts",
+    "db:seed:local": "dotenv -e .env.local -- tsx prisma/seed.ts",
+    "dev:local": "dotenv -e .env.local -- next dev --turbopack",
+    "build:prod": "dotenv -e .env.production -- next build"
+  },
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^6.13.0",
+    "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.536.0",
@@ -29,9 +40,11 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^6.0.0",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv-cli": "^10.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.4.5",
     "tailwindcss": "^4",
