--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # 数据库配置
-DATABASE_URL="mysql://root:root@localhost:3306/database_name"
+DATABASE_URL="mysql://root:root@localhost:3306/blog_next"
 
 # 应用配置
 NEXTAUTH_SECRET="your-nextauth-secret-here"
