--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "lucide-react": "^0.536.0",
     "mysql2": "^3.14.3",
     "next": "15.4.5",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
