--- a/package.json
+++ b/package.json
@@ -24,10 +24,6 @@
     "seed": "tsx prisma/seed.ts"
   },
   "dependencies": {
-    "@fumadocs/mdx-remote": "^1.4.0",
-    "@mdx-js/loader": "^3.1.0",
-    "@mdx-js/react": "^3.1.0",
-    "@next/mdx": "^15.4.5",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -39,17 +35,16 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
-    "@types/mdx": "^2.0.13",
+    "@toast-ui/editor": "^3.2.2",
+    "@toast-ui/react-editor": "^3.2.3",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fumadocs-mdx": "^11.7.3",
     "fumadocs-ui": "^15.6.9",
     "lucide-react": "^0.536.0",
     "mysql2": "^3.14.3",
     "next": "15.4.5",
     "next-auth": "^4.24.11",
-    "next-mdx-remote": "^5.0.0",
     "next-themes": "^0.4.6",
     "prisma": "^6.13.0",
     "react": "19.1.0",
