--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fumadocs-ui": "^15.6.9",
     "lucide-react": "^0.536.0",
     "mysql2": "^3.14.3",
     "next": "15.4.5",
@@ -49,7 +48,7 @@
     "prisma": "^6.13.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "rehype-highlight": "^7.0.2",
+    "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
