--- a/.env.local
+++ b/.env.local
@@ -1,5 +1,5 @@
 # 数据库配置
-DATABASE_URL="mysql://root:root@localhost:3306/blog_next"
+DATABASE_URL="mysql://root:root@localhost:3306/blog_next?connection_limit=10&pool_timeout=20&connect_timeout=10"
 
 # 应用配置
 NEXTAUTH_SECRET="your-nextauth-secret-here"
