--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,8 @@ SMTP_PASS="your-email-password"
 # 分析工具配置（可选）
 GOOGLE_ANALYTICS_ID="your-ga-id"
 VERCEL_ANALYTICS_ID="your-vercel-id"
+
+# Coze API 配置
+COZE_API_TOKEN="your-coze-api-token"
+COZE_BASE_URL="https://api.coze.cn"
+COZE_WORKFLOW_ID="your-coze-workflow-id"
