--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
   },
   "dependencies": {
     "@coze/api": "^1.3.5",
+    "@orama/highlight": "^0.1.9",
     "@orama/orama": "^3.1.11",
+    "@orama/stopwords": "^3.1.11",
+    "@orama/tokenizers": "^3.1.11",
     "@prisma/client": "^6.13.0",
     "@radix-ui/react-alert-dialog": "^1.1.14",
     "@radix-ui/react-avatar": "^1.1.10",
