--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,13 @@ GOOGLE_CLIENT_SECRET="your-google-client-secret"
 UPLOAD_DIR="./public/uploads"
 MAX_FILE_SIZE="10485760"  # 10MB
 
+# 腾讯云COS配置
+COS_SECRET_ID="your-cos-secret-id"
+COS_SECRET_KEY="your-cos-secret-key"
+COS_BUCKET="your-bucket-name"
+COS_REGION="ap-beijing"
+COS_DOMAIN="https://your-bucket-name.cos.ap-beijing.myqcloud.com"
+
 # 邮件配置（可选）
 SMTP_HOST="smtp.gmail.com"
 SMTP_PORT="587"
