--- a/.gitignore
+++ b/.gitignore
@@ -30,10 +30,6 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# env files
-.env.local
-.env.development
-.env.production
 
 # vercel
 .vercel
@@ -44,3 +40,4 @@ next-env.d.ts
 
 /src/generated/prisma
 /public/uploads/image
+.env
