--- a/package.json
+++ b/package.json
@@ -7,18 +7,11 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "db:generate:prod": "dotenv -e .env.production -- prisma generate",
-    "db:generate:local": "dotenv -e .env.local -- prisma generate",
-    "db:push:prod": "dotenv -e .env.production -- prisma db push",
-    "db:push:local": "dotenv -e .env.local -- prisma db push",
-    "db:migrate:prod": "dotenv -e .env.production -- prisma migrate prod",
-    "db:migrate:local": "dotenv -e .env.local -- prisma migrate dev",
-    "db:studio:prod": "dotenv -e .env.production -- prisma studio",
-    "db:studio:local": "dotenv -e .env.local -- prisma studio",
-    "db:seed:prod": "dotenv -e .env.production -- tsx prisma/seed.ts",
-    "db:seed:local": "dotenv -e .env.local -- tsx prisma/seed.ts",
-    "dev:local": "dotenv -e .env.local -- next dev --turbopack",
-    "build:prod": "dotenv -e .env.production -- next build"
+    "db:generate": "dotenv -e .env -- prisma generate",
+    "db:push": "dotenv -e .env -- prisma db push",
+    "db:migrate": "dotenv -e .env -- prisma migrate dev",
+    "db:studio": "dotenv -e .env -- prisma studio",
+    "db:seed:": "dotenv -e .env -- tsx prisma/seed.ts"
   },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
@@ -50,6 +43,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cos-nodejs-sdk-v5": "^2.15.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.536.0",
     "mysql2": "^3.14.3",
